# ViTMO

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md
.github/ISSUE_TEMPLATE/: ошибка-в-решении.md
S1/Algorithms and Data Structures/Lab-1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
S1/Algorithms-And-Data-Structures/: README.md
S1/Algorithms-And-Data-Structures/Lab-1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
S1/Algorithms-And-Data-Structures/Lab-2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
S1/Algorithms-And-Data-Structures/Lab-3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
S1/Algorithms-And-Data-Structures/Lab-4/: B.cpp  C.cpp
S1/Algorithms-And-Data-Structures/Lab-5/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
S1/Algorithms-And-Data-Structures/Lab-6/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
S1/Algorithms-And-Data-Structures/Lab-7/: A.cpp  B.cpp  C.cpp
S1/Computer-Architecture/: README.md
S1/Computer-Architecture/Lab-1/: counter.circ  lfsr.circ
S1/Computer-Architecture/Lab-2/: README.md  cache.sv  cppstart.sh  cpu.sv  memory.sv  mockup.cpp  testbench.sv  verinit.sh
S1/Computer-Architecture/Lab-3/: .gitignore  CMakeLists.txt  Ерёмин_Владимир_М3100_3.docx
S1/Computer-Architecture/Lab-3/include/: disasm.h  elf.h
S1/Computer-Architecture/Lab-3/lib/: CMakeLists.txt  disasm.cpp  elf.cpp
S1/Computer-Architecture/Lab-3/test/: test.cc  test_elf.disasm
S1/Computer-Architecture/Lab-4/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Ерёмин_Владимир_М3100_4.docx
S1/Computer-Architecture/Lab-4/test_data/: out.pgm
S1/Development-Tools/: README.md
S1/Programming-Intro-Cpp/: README.md
S1/Programming-Intro-Cpp/Lab-1/: .gitignore  CMakeLists.txt  README.md  main.cpp
S1/Programming-Intro-Cpp/Lab-2/: .gitignore  README.md
S1/Programming-Intro-Cpp/Lab-3/: CMakeLists.txt  README.md
S1/Programming-Intro-Cpp/Lab-3/include/: argument_parser.h  imgmanip.h  interactions.h  sandbox.h  sandpile.h
S1/Programming-Intro-Cpp/Lab-3/lib/: CMakeLists.txt  argument_parser.cpp  imgmanip.cpp  interactions.cpp  sandbox.cpp  sandpile.cpp
S1/Programming-Intro-Cpp/Lab-3/src/: CMakeLists.txt  src.cpp  src.h
S1/Programming-Intro-Cpp/Lab-3/test/: CMakeLists.txt  sandbox_test.cpp  sandpile_test.cpp
S1/Programming-Intro-Cpp/Lab-4/: .gitignore  A.cpp  CMakeLists.txt  D.cpp  README.md
S1/Programming-Intro-Cpp/Lab-4/lib/: CMakeLists.txt  argument_parser.cpp  config.cpp  encoder.cpp  hamming_archive.cpp  interactions.cpp
S1/Programming-Intro-Cpp/Lab-4/test/: CMakeLists.txt  encoder_test.cpp
S1/Programming-Intro-Cpp/Lab-5/: .gitignore  CMakeLists.txt  README.md
S1/Programming-Intro-Cpp/Lab-5/include/: builders.h  exceptions.h  options.h  parser.h
S1/Programming-Intro-Cpp/Lab-5/lib/: CMakeLists.txt  builders.cpp  exceptions.cpp  options.cpp  parser.cpp
S1/Programming-Intro-Cpp/Lab-5/src/: CMakeLists.txt  main.cpp  main.h
S1/Programming-Intro-Cpp/Lab-5/test/: CMakeLists.txt  argparser_test.cpp
S1/Programming-Intro-Java/: README.md
S2/Algorithms-And-Data-Structures/: README.md
S2/Programming-Languages-C++/: README.md
S2/Programming-Languages-C++/Lab-1/: .bad_words  .clang-tidy  .gitignore  CMakeLists.txt  README.md
S2/Programming-Languages-C++/Lab-1/include/: calc.hpp
S2/Programming-Languages-C++/Lab-1/src/: calc.cpp
S2/Programming-Languages-C++/Lab-1/tests/: CMakeLists.txt
S2/Programming-Languages-C++/Lab-1/tests/src/: main.cpp
S2/Programming-Languages-C++/Lab-3/libraries/SeamCarver/: CMakeLists.txt
S2/Programming-Languages-C++/Lab-3/libraries/SeamCarver/include/: Image.hpp  SeamCarver.hpp
S2/Programming-Languages-C++/Lab-3/libraries/SeamCarver/src/: Image.cpp  SeamCarver.cpp
S2/Programming-Languages-C++/Lab-3/libraries/SeamCarver/tests/: test.cpp
S2/Programming-Languages-C++/Lab-3/libraries/Tree/: CMakeLists.txt
S2/Programming-Languages-C++/Lab-3/libraries/Tree/include/tree/: Tree.hpp
S2/Programming-Languages-C++/Lab-5/libraries/expr/: CMakeLists.txt
S2/Programming-Languages-C++/Lab-5/libraries/expr/include/expr/: Add.hpp  Const.hpp  Divide.hpp  Expression.hpp  Multiply.hpp  Negate.hpp  Subtract.hpp  Variable.hpp  expressions.hpp
S2/Programming-Languages-C++/Lab-5/libraries/expr/include/expr/type/: Exponential.hpp
S2/Programming-Languages-C++/Lab-5/libraries/expr/src/: Add.cpp  Const.cpp  Divide.cpp  Expression.cpp  Multiply.cpp  Subtract.cpp  Variable.cpp
S2/Programming-Languages-C++/Lab-5/libraries/expr/src/type/: Exponential.cpp
S2/Programming-Languages-C++/Lab-5/libraries/expr/test/: test_exponential.cpp  test_expression.cpp
S2/Programming-Languages-C++/Proj-2/libraries/ga/: CMakeLists.txt
S2/Programming-Languages-C++/Proj-2/libraries/ga/include/ga/: Genome.hpp
S2/Programming-Languages-C++/Proj-2/libraries/ga/src/: Genome.cpp
S2/Programming-Languages-C++/Proj-2/libraries/ga/tests/: test.cpp
S2/Programming-Languages-C++/Proj-3/libraries/se/: CMakeLists.txt
S2/Programming-Languages-C++/Proj-3/libraries/se/etc/: many_queries.txt
S2/Programming-Languages-C++/Proj-3/libraries/se/include/se/: Searcher.hpp
S2/Programming-Languages-C++/Proj-3/libraries/se/src/: Searcher.cpp
S2/Programming-Languages-C++/Proj-3/libraries/se/tests/: list.inl  load_test.cpp  queries.inl  test.cpp
S2/Programming-Paradigms/: README.md
S3/Algorithms-And-Data-Structures/: README.md
S3/Applied-Operating-Systems/: README.md
S3/Discrete-Math/: README.md
S3/Discrete-Math/Lab-1/: a.cpp  b.cpp  (+6 more)
S3/History-of-Russian-Culture-in-the-Context-of-World-Culture/: README.md
S3/Math-Logic/: README.md
S3/Web-Programming/: README.md
S4/Advanced-Java/: README.md
S4/Algorithms-And-Data-Structures/: README.md
S4/Discrete-Math/: README.md
S4/Social-Media-Computing/: README.md
S5/Data-Analysis-And-Machine-Learning-1/: README.md
S5/Functional-Programming/: README.md
S5/Mathematical-Statistics/: README.md
S5/Parallel-Programming/: README.md
S6/Bioinformatics/: README.md
S6/Computer-Networking/: README.md
S6/Data-Analysis-And-Machine-Learning-2/: README.md
(+803 files in other folders)
